--- a/scripts/ingress-controller.yaml
+++ b/scripts/ingress-controller.yaml
@@ -362,7 +362,7 @@ spec:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
   type: LoadBalancer
-  loadBalancerIP: 192.168.1.60
+  loadBalancerIP: 192.168.1.$down
 ---
 apiVersion: v1
 kind: Service
